; ModuleID = '/home/carl/AnghaBench/esp-idf/components/vfs/test/extr_test_vfs_uart.c_flush_stdin_stdout.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/vfs/test/extr_test_vfs_uart.c_flush_stdin_stdout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@portTICK_PERIOD_MS = common dso_local global i32 0, align 4
@UART_FIFO_LEN = common dso_local global i32 0, align 4
@stdin = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@CONFIG_ESP_CONSOLE_UART_NUM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @flush_stdin_stdout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flush_stdin_stdout() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = load i32, i32* @portTICK_PERIOD_MS, align 4
  %4 = sdiv i32 10, %3
  %5 = call i32 @vTaskDelay(i32 %4)
  %6 = load i32, i32* @UART_FIFO_LEN, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %1, align 8
  %9 = alloca i8, i64 %7, align 16
  store i64 %7, i64* %2, align 8
  br label %10

10:                                               ; preds = %15, %0
  %11 = load i32, i32* @UART_FIFO_LEN, align 4
  %12 = load i32, i32* @stdin, align 4
  %13 = call i64 @fread(i8* %9, i32 1, i32 %11, i32 %12)
  %14 = icmp sgt i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %10
  br label %10

16:                                               ; preds = %10
  %17 = load i32, i32* @stdout, align 4
  %18 = call i32 @fflush(i32 %17)
  %19 = load i32, i32* @CONFIG_ESP_CONSOLE_UART_NUM, align 4
  %20 = call i32 @uart_tx_wait_idle(i32 %19)
  %21 = load i8*, i8** %1, align 8
  call void @llvm.stackrestore(i8* %21)
  ret void
}

declare dso_local i32 @vTaskDelay(i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i64 @fread(i8*, i32, i32, i32) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @uart_tx_wait_idle(i32) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
